Some optimizations to rendering

--- a/CustomsGraphs.html
+++ b/CustomsGraphs.html
@@ -61,6 +61,7 @@
 <body>
 
     <div id="wrapper">
+        <h1> This section is under development, will come soon</h1>
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
