--- a/OverTime.html
+++ b/OverTime.html
@@ -21,7 +21,7 @@
     <link href="sbadmin2-1.0.7/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
 
     <!-- Legends CSS -->
-    <link href="css/legends.css" rel="stylesheet">
+    <link href="content/css/legends.css" rel="stylesheet">
 
 
     <!-- Custom CSS -->
@@ -31,9 +31,9 @@
     <link href="sbadmin2-1.0.7/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
    <!-- JQuery UI style -->
-    <link href="css/jquery-ui.min.css" rel="stylesheet">
-    <link href="css/jquery-ui.structure.min.css" rel="stylesheet">
-    <link href="css/jquery-ui.theme.min.css" rel="stylesheet">
+    <link href="content/css/jquery-ui.min.css" rel="stylesheet">
+    <link href="content/css/jquery-ui.structure.min.css" rel="stylesheet">
+    <link href="content/css/jquery-ui.theme.min.css" rel="stylesheet">
 
     <script src="lib/VSS.SDK.min.js"></script>
 
@@ -58,7 +58,17 @@
 </head>
 
 <body>
+    <style>
+        .navbar-brand select {
+            border: 0px;
+            color: rgb(0, 90, 158);
+        }
 
+        .navbar-brand label {
+            color: rgb(0, 90, 158);
+            font-weight: 400;
+        }
+    </style>
     <div id="wrapper">
 
         <!-- Navigation -->
@@ -70,7 +80,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Apache JMeter Dashboard</a>
+                <div class="navbar-brand">
+                    <a href="index.html">Apache JMeter Dashboard</a>
+                    <label for="jmxfiles">for</label>
+                    <select name="jmxfiles" id="jmxfiles"></select>
+                </div>
             </div>
             <!-- /.navbar-header -->
 
@@ -489,17 +503,17 @@
     <script src="sbadmin2-1.0.7/bower_components/flot/jquery.flot.selection.js"></script>
     <script src="sbadmin2-1.0.7/bower_components/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
     <script src="sbadmin2-1.0.7/bower_components/flot-axislabels/jquery.flot.axislabels.js"></script>
-    <div id="fourthscript"></div>
-    <div id="fifthscript"></div>
-    <div id="sixthscript"></div>
-    <div id="seventhscript"></div>
-    <div id="firstscript"></div>
-    <div id="ninthscript"></div>
-    <div id="tenthscript"></div>
-    <div id="eleventhscript"></div>
+    <div id="pub_jquery.flot.stack"></div>
+    <div id="pub_hashtable"></div>
+    <div id="pub_jquery.numberformatter-1.2.3.min"></div>
+    <div id="pub_curvedLines"></div>
+    <div id="pub_dashboard-commons"></div>
+    <div id="pub_jquery.cookie"></div>
     <!-- Custom Theme JavaScript -->
     <script src="sbadmin2-1.0.7/dist/js/sb-admin-2.js"></script>
-
+    
+    <div id="pub_jquery-ui.min" defer></div>
+    <div id="pub_utils" defer></div>
 </body>
 
 </html>
